app/styles/main.scss
$total-columns: 24;
@import 'foundation/components/grid';
$dark-color: #222;

* {
  user-select: none;
}

html, body, main {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  color: $dark-color;
  text-rendering: optimizeLegibility;
  background-color: #fcfcfc;
  min-width: 1110px;
}

#front-door {
  background-color: $dark-color;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 5;
  animation-name: fadeout;
  animation-delay: .29s;
  animation-duration: 1.45s;
  animation-timing-function: ease-in;
  animation-fill-mode: both;
}

@keyframes fadeout {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

main {
  overflow-x: scroll;
  padding: 22px 48px 48px 48px;
}

a {
  text-decoration: none;
}

.btn {
  border: 3px solid $dark-color;
  padding: 10px 20px 8px 20px;
  font-size: 15px;
  text-transform: uppercase;
}

textarea {
  border: 3px solid $dark-color;
  background-color: transparent;
  margin: 0;
  padding: 0;
  &:focus {
    outline: none;
  }
}

button {
  border: 3px solid $dark-color;
  background-color: transparent;
  &:focus {
    outline: none;
  }
  &:disabled {
    color: #a9a9a9;
  }
}

.clear {
  clear: both;
}

.center {
  margin: 0 auto;
}

.container {
  height: 100%;
  position: relative;
}

#videos {
  padding-right: 12px;
}

.video {
  overflow: hidden;
  border: 3px $dark-color solid;
  background-color: white;
}

video {
  object-fit: cover;
  height: 100%;
  width: 100%
}

.remote-stream {
  height: 61%;
}

#btns-and-local-stream {
  height: 39%;
  padding-bottom: 24px;
}

#brand-and-btns {
  height: 100%;
  position: relative;
  padding-right: 24px;
}

#brand-container {
  position: relative;
  height: calc(100% - 150px);
  width: 100%;
  z-index: 1;
  font-family: "europa";
  color: white;
  font-size: 35px;
  letter-spacing: 4px;
  background-color: $dark-color;
  overflow: hidden;
}

#brand {
  width: 100%;
  height: 100%;
  transition: transform .9s ease;
}

#brand .brand-side {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  & > span {
    align-self: center;
    font-size: 26px;
  }
}

#beta-ribbon {
  width: 0px;
  height: 0px;
  position: absolute;
  left: 0;
  top: 0;
  border: 24px solid #ea9161;
  border-color: #767dac;
  border-bottom-color: transparent;
  border-right-color: transparent;
}

#beta-whitespace {
  width: 0px;
  height: 0px;
  position: absolute;
  left: 0;
  top: 0;
  border: 11px solid #222;
  border-bottom-color: transparent;
  border-right-color: transparent;
  z-index: 2;
}

#beta {
  transform: rotate(-45deg);
  display: inline-block;
  font-size: 12.5px;
  transform-origin: -33.5px 16px;
  letter-spacing: 1px;
}

// #brand-container:hover #brand {
//   transform: translateY(-100%);
// }

#social-media-icons {
  margin: 0 20px;
  font-size: 53px;
  width: 100%;
  text-align: center;
  margin-top: -3px;
}

#social-media-icons .icon {
  width: 33%;
  display: inline-block;
  margin-top: -5px;
  a {
    color: white;
  }
}

#btns {
  padding-top: 24px;
  height: 150px;
}

#stop-n-go-btns-wrapper {
  height: 50%;
  width: 100%;
  border: 3px solid $dark-color;
  border-bottom: 2px solid $dark-color;
  background-color: white;
  overflow: hidden;
}

#stop-n-go-btns {
  width: 250%;
  height: 100%;
  position: relative;
  left: 0;
  &.showStop-add {
    transition: 0.65s linear;
  }
  &.showStop-remove {
    transition: 0.65s linear;
  }
  &.showStop {
    left: calc(-100% - 4px);
  }
}

#stop-n-go-btns button {
  height: 100%;
  width: 40%;
  cursor: pointer;
  border: none;
  font-family: "europa";
  font-size: 17px;
  color: $dark-color;
  &:disabled {
    color: #aaa;
    cursor: default;
  }
}

#stop-n-go-btns #start-btn {
  border-right: 3px solid black;
  width: calc(40% + 3px);
}

#next-btn {
  height: 50%;
  width: 100%;
  border: 3px solid $dark-color;
  border-top: 1px solid $dark-color;
  overflow: hidden;
}

#next-btn button {
  background-color: white;
  border: none;
  cursor: pointer;
  font-family: "europa";
  font-size: 17px;
  height: 100%;
  width: 100%;
  &:disabled {
    color: #aaa;
    cursor: default;
  }
}

.local-stream {
  height: 100%;
}

#chat {
  padding-left: 12px;
}

#landing-page {
  padding: 24px 30px;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  color: white;
  h1 {
    margin-top: 10px;
    font-size: 36px;
    line-height: 45px;
    margin-bottom: 31px;
    position: relative;
    z-index: 2;
    font-weight: 500;
    margin-right: 72px;
  }
  h2 {
    margin-top: 88px;
    font-size: 25px;
    line-height: 35px;
    margin-bottom: 0;
    font-weight: 500;
    position: relative;
    z-index: 2;
    font-weight: 400;
    span {
      vertical-align: text-top;
    }
  }
  #login-container {
    user-select: none;
    margin-top: 6px;
    margin-left: 4px;
    vertical-align: middle;
    background-color: #37569a;
    height: 48px;
    overflow: hidden;
    color: white;
    padding: 5px 19px 0 14px;
    cursor: pointer;
    transition: .4s ease;
    font-weight: 500;
    display: inline-block;
    width: 207px;
    position: relative;
    #login {
      transition: .4s ease;
    }
    &:hover {
      background-color: #4868af;
      #login {
        transform: translateY(-50%);
      }
    }
    .login-side {
      height: 48px;
      font-size: 21px;
      -webkit-font-smoothing: antialiased;
    }
  }
}

#landing-page.ng-enter, #landing-page.ng-leave {
  transition: 0.5s linear;
}

#landing-page.ng-enter,
#landing-page.ng-leave.ng-leave-active {
  opacity: 0;
}

#landing-page.ng-leave,
#landing-page.ng-enter.ng-enter-active {
  opacity: 1;
}

#chat-border {
  height: 100%;
  width: 100%;
  position: relative;
  overflow: hidden;
  background-color: white;
  border: 3px solid $dark-color;
}

#gradient {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: rgb(41,49,99); /* Old browsers */
  background: -moz-linear-gradient(top,  rgba(41,49,99,1) 0%, rgba(47,61,117,1) 17%, rgba(84,92,162,1) 27%, rgba(135,132,194,1) 37%, rgba(166,151,211,1) 49%, rgba(215,183,221,1) 59%, rgba(246,215,210,1) 77%, rgba(246,207,192,1) 86%, rgba(232,145,102,1) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(41,49,99,1)), color-stop(17%,rgba(47,61,117,1)), color-stop(27%,rgba(84,92,162,1)), color-stop(37%,rgba(135,132,194,1)), color-stop(49%,rgba(166,151,211,1)), color-stop(59%,rgba(215,183,221,1)), color-stop(77%,rgba(246,215,210,1)), color-stop(86%,rgba(246,207,192,1)), color-stop(100%,rgba(232,145,102,1))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(41,49,99,1) 0%,rgba(47,61,117,1) 17%,rgba(84,92,162,1) 27%,rgba(135,132,194,1) 37%,rgba(166,151,211,1) 49%,rgba(215,183,221,1) 59%,rgba(246,215,210,1) 77%,rgba(246,207,192,1) 86%,rgba(232,145,102,1) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(41,49,99,1) 0%,rgba(47,61,117,1) 17%,rgba(84,92,162,1) 27%,rgba(135,132,194,1) 37%,rgba(166,151,211,1) 49%,rgba(215,183,221,1) 59%,rgba(246,215,210,1) 77%,rgba(246,207,192,1) 86%,rgba(232,145,102,1) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(41,49,99,1) 0%,rgba(47,61,117,1) 17%,rgba(84,92,162,1) 27%,rgba(135,132,194,1) 37%,rgba(166,151,211,1) 49%,rgba(215,183,221,1) 59%,rgba(246,215,210,1) 77%,rgba(246,207,192,1) 86%,rgba(232,145,102,1) 100%); /* IE10+ */
  background: linear-gradient(to bottom,  rgba(41,49,99,1) 0%,rgba(47,61,117,1) 17%,rgba(84,92,162,1) 27%,rgba(135,132,194,1) 37%,rgba(166,151,211,1) 49%,rgba(215,183,221,1) 59%,rgba(246,215,210,1) 77%,rgba(246,207,192,1) 86%,rgba(232,145,102,1) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#293163', endColorstr='#e89166',GradientType=0 ); /* IE6-9 */
}

#gradient-shadows {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-image: url('/images/white_shadows.png');
  background-size: cover;
  background-repeat: no-repeat;
  opacity: 0.4;
}

#msgs {
  overflow-y: scroll;
  height: calc(100% - 75px);
}

#send-msg-form {
  border-top: 3px solid $dark-color;
  width: 100%;
  height: 75px;
  position: relative;
  background-color: white;
}

#send-msg-form.ng-hide-remove {
  transition: 0.8s ease;

  display: block !important;
  top: 0px;
}

#send-msg-form.ng-hide {
  top: 75px;
}

#send-msg-form textarea {
  resize: none;
  display: inline-block;
  vertical-align: top;
  width: 100%;
  height: 100%;
  padding: 14px 20px;
  font-size: 14px;
  border: none;
  font: -webkit-control;
  min-height: 0;
  line-height: 21px;
}

#msgs .msg:last-child {
  margin-bottom: 15px;
}

.msg {
  font-size: 14px;
  overflow: auto;
  padding: 4px 22px;
  padding-bottom: 4.5px;
  padding-right: 100px;
  line-height: 19px;
  width: 100%;
  &.self {
    text-align: right;
    padding-left: 100px;
    padding-right: 19px;
  }
}

.msg .msg-payload {
  background-color: #ecebee;
  padding: 4px 10px;
  width: intrinsic;
  border-radius: 6px;
  position: relative;
  user-select: text;
  &:after {
    content: '';
    position: absolute;
    border-style: solid;
    border-width: 9px 7px 0 0;
    border-color: transparent #ecebee;
    display: block;
    width: 0;
    z-index: 1;
    left: -7px;
    top: 12px;
  }
}

.msg.self .msg-payload {
  float: right;
  &:after {
    right: -7px;
    left: auto;
    border-width: 9px 0 0 7px;
  }
}

.msg:first-child {
  margin-top: 14px;
}

.msg:last-child {
  margin-bottom: 14px;
}

.spinner {
  margin: 165px auto 0;
  width: 116px;
  text-align: center;
}

.spinner > div {
  width: 15px;
  height: 14px;
  margin: 0 10px;
  border-radius: 2px;

  display: inline-block;
  /* Prevent first frame from flickering when animation starts */
}

.spinner .bounce1 {
  animation: bouncedelay-orange 1.4s infinite ease;
  animation-fill-mode: both;
  animation-delay: 1.8s;
}

.spinner .bounce2 {
  animation: bouncedelay-purple 1.4s infinite ease;
  animation-fill-mode: both;
  animation-delay: 2.1s;
}

.spinner .bounce3 {
  animation: bouncedelay-blue 1.4s infinite ease;
  animation-fill-mode: both;
  animation-delay: 2.4s;
}

@keyframes bouncedelay-blue {
  0%, 80%, 100% {
    transform: scale(0.2);
    background-color: #fff;
  }

  40% {
    transform: scale(1.0);
    background-color: #24306e;
  }
}

@keyframes bouncedelay-purple {
  0%, 80%, 100% {
    transform: scale(0.2);
    background-color: #fff;
  }

  40% {
    transform: scale(1.0);
    background-color: #b698dc;
  }
}

@keyframes bouncedelay-orange {
  0%, 80%, 100% {
    transform: scale(0.2);
    background-color: #fff;
  }

  40% {
    transform: scale(1.0);
    background-color: #ff9f6e;
  }
}

#waiting-share-links {
  margin-top: 11px;
  margin-bottom: 6px;
  .fb_iframe_widget {
    vertical-align: middle;
  }
  .twitter-share-button {
    margin-left: 11px;
    vertical-align: middle;
  }
}

footer {
  position: absolute;
  bottom: 18px;
  text-align: center;
  width: 100%;
  font-family: "europa";
  color: #999;
  font-size: 14px;
  padding: 0 48px;
  a {
    color: #999;
    &:visited {
      color: #999;
    }
    &:hover {
      text-decoration: underline;
    }
  }
}

